added a favi icon and changed the title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>doc</title>
+    <title>To-Do</title>
+    <link rel="shortcut icon" href="IMG-20240426-WA0096.jpg" type="image/x-icon">
 </head>
 <link rel="stylesheet" href="style.css">
 <body>
