--- a/index.html
+++ b/index.html
@@ -5,8 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To-Do</title>
     <link rel="shortcut icon" href="IMG-20240426-WA0096.jpg" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
+        <!-- Other meta tags -->
+        <link rel="manifest" href="manifest.json">
+        <link rel="icon" sizes="192x192" href="icon-192x192.png">
+        <link rel="icon" sizes="512x512" href="icon-512x512.png">
+      
 </head>
-<link rel="stylesheet" href="style.css">
 <body>
 
     <!--  <h1 id="show">0</h1>
